2008-02-25 Dale E. Edmons <linuxfan@sourcemage.org>
	* CONFLICTS: Deprecate globulation2.
	* DETAILS: Updated SPELL to glob2, VERSION to 0.9.2.
	* DEPENDS: Added scons, zlib, libogg.
	* INSTALL: Created for `scons install`.
	* BUILD: Changed to scons.

2007-04-19 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: updated no 0.8.23

2006-08-15 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated to 0.8.21
	  Removed BUILD_API=2 (grimoire-wide) and UPDATED (deprecated)

2006-03-21 Benjamin 'Asaru' Dirks <asaru@wtnet.de>
	* DETAILS: version update - 0.8.19
	  updatet source and website url

2006-02-12 Neuron <vlmarek@volny.cz>
	* DETAILS: version update - 0.8.18
	* DEPENDS: added boost dependency

2005-12-27 Neuron <vlmarek@volny.cz>
	* DETAILS: version update - 0.8.17

2005-12-16 Neuron <vlmarek@volny.cz>
	* Fixed wrong SOURCE_HASH line

2005-12-10 Neuron <vlmarek@volny.cz>
	* DETAILS: version update - 0.8.16

2005-12-01 Seth Woolley <seth@tautology.org>
	* DETAILS: MD5 -> SHA512

2005-06-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: version update
	* BUILD: now uses default_game_build

2005-02-20 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: SOURCE_URL fixed, version update

2005-01-29 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: New WEB_SITE URL
	  We're now listed on their Download page. ;)

2005-01-28 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated to 0.8.11
	  Added BUILD_API=2
	  Shortened SHORT
	* DEPENDS: Added dependency on speex
	  Formatted to Guru Handbook

2004-09-16 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DETAILS: updated to 0.8.8
	* BUILD: added to add -L/usr/X11R6/lib to LDFLAGS so libGLU is found

2004-08-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* BUILD: removed
	* Minor bugfixes
	* DETAILS: BUILD_API=2

2004-08-14 Duane Malcolm <d.malcolm@auckland.ac.nz>
	* DETAILS DEPENDS BUILD HISTORY: Added spell
