@@ -1,1 +1,1 @@
-depends new
+depends glob2
